git feat : display schedule for a group + insert basic datas